# CurvesTest

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: CurvesConfig.cmake.in
include/Curves/: AbstractCurve.h  Circle.h  Definitions.h  Ellipse.h  Helix.h  Vec3.h
src/: Circle.cpp  Ellipse.cpp  Helix.cpp  Main.cpp
